# SgIslands

./: CMakeLists.txt  README.md  SgIslands.sln
SgIslands/: SgIslands.vcxproj  SgIslands.vcxproj.filters  imgui.ini
SgIslands/res/config/: Imgui.ini  animations.xml  app.xml  assets.xml  deepWaterTileset.xml  example_map.xml  island_16x16.xml  island_5x5.xml  miscTileset.xml  terrainTileset.xml  tileset.xml  unitAnimations.xml
SgIslands/res/islands/: island_5x5.xml
SgIslands/src/: Entity.hpp  Main.cpp
SgIslands/src/core/: Application.hpp  BitmaskManager.hpp  Collision.hpp  Config.hpp  Log.hpp  Mouse.hpp  ResourceHolder.hpp  SgException.hpp  Types.hpp  XmlWrapper.hpp
SgIslands/src/ecs/: Components.hpp  Events.hpp  Systems.hpp
SgIslands/src/gui/: Gui.hpp
SgIslands/src/iso/: Animation.hpp  Asset.hpp  AssetAnimation.hpp  AssetMetaData.hpp  Assets.hpp  Astar.hpp  Island.hpp  IsoMath.hpp  Map.hpp  Node.hpp  Tile.hpp  TileAtlas.hpp  Unit.hpp  UnitAnimations.hpp  VecMath.hpp
